<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".DriverLoginActivity">

    <Button
        android:id="@+id/customer_login_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_password_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/customer_register_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_password_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@color/colorAccent"
        android:text="@string/register"
        android:textColor="@color/colorPrimaryDark"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/taxi"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/taxi"
        android:tint="@color/colorAccent" />

    <ProgressBar
        android:id="@+id/customer_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logo"
        android:layout_toStartOf="@+id/taxi"
        android:visibility="gone" />

    <TextView
        android:id="@+id/customer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/customer_login"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taxi"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/customer_register_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_login_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/register_prompt"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/customer_login_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_register_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/login_prompt"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:visibility="gone" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customer_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_label"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/colorAccent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customer_email"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/customer_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_email_layout"
        android:textColorHint="@color/colorAccent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorAccent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/customer_password"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>

</RelativeLayout>