<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/customer_settings_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/settings"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/customer_logout_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/logout"
        android:textColor="@color/colorAccent" />

    <Button
        android:id="@+id/request_ride_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/request_ride"
        android:textColor="@color/colorAccent" />

    <fragment
        android:id="@+id/customers_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DriversMapActivity" />

</RelativeLayout>
